<resources>
    <string name="app_name">FindHomes</string>

    <!-- ContractSelectActivity -->
    <string name="contract_title">계약 형태 입력</string>
    <string name="contract_room">방 종류</string>
    <string name="contract_overlap">중복 선택 가능</string>
    <string name="contract_room_one">원룸</string>
    <string name="contract_room_two">투룸</string>
    <string name="contract_room_three">쓰리룸 이상</string>
    <string name="contract_room_office">오피스텔</string>
    <string name="contract_room_apart">아파트</string>
    <string name="contract_form">계약 형태</string>
    <string name="contract_form_monthly">월세</string>
    <string name="contract_form_charter">전세</string>
    <string name="contract_form_trading">매매</string>
    <string name="contract_price">가격</string>
    <string name="contract_price_monthly">월세</string>
    <string name="contract_price_charter">보증금(전세금)</string>
    <string name="contract_price_trading">매매가</string>
    <string name="contract_price_minimum">최소</string>
    <string name="contract_price_maximum">최대</string>
    <string name="contract_price_unlimited">무제한</string>
    <string name="contract_price_monthly_center">1억 2,000만원</string>
    <string name="contract_price_charter_center">60만원</string>
    <string name="contract_price_trading_center">5억원</string>
    <string name="contract_before">다음에</string>
    <string name="contract_next">적용하기</string>

    <!-- RegionSelectActivity -->
    <string name="region_title">지역 설정</string>
    <string name="region_select_title">선택한 지역</string>
    <string name="region_city">시/도</string>
    <string name="region_county">시/구/군</string>
    <string name="text_before">이전</string>
    <string name="text_after">다음</string>

    <!-- ChatDetailActivity -->
    <string name="detail_title">세부 조건 입력</string>
    <string name="detail_sub_title">조건을 입력해주시면\nAI 기반으로 추천해드릴게요!</string>
    <string name="detail_main">원하는 조건을 입력해주세요</string>
    <string name="detail_input">조건을 입력하세요</string>
    <string name="detail_chat_end">맞춤형 결과를 보시겠어요?</string>
    <string name="detail_chat_yes">네</string>
    <string name="detail_chat_no">아니오</string>

    <!-- SearchResultFragment  -->
    <string name="result_sub_title">입력해주신 데이터를 기반으로\n맞춤형 매물을 소개해드릴게요!</string>
    <string name="result_show_title">매물 추천 결과</string>
    <string name="result_show">결과 보러가기</string>
    <string name="result_ranking">맞춤형 검색 매물 순위</string>
    <string name="result_ranking_kor">위</string>

    <!-- SearchDetailFragment -->
    <string name="detail_price_info">가격 정보</string>
    <string name="detail_detail_info">상세 정보</string>
    <string name="detail_room">방 종류</string>
    <string name="detail_floor">해당층/건물층</string>
    <string name="detail_area">전용/공급면적</string>
    <string name="detail_room_number">방 수/욕실 수</string>
    <string name="detail_housing_option">기타 옵션</string>
    <string name="detail_address">상세 주소</string>
    <string name="detail_complete">완공일</string>
    <string name="detail_direction">방향</string>
    <string name="detail_update">업데이트</string>
    <string name="detail_for">건축물용도</string>
    <string name="detail_maintenance_fee_text">%1$d만원</string>
    <string name="detail_size_text">%1$.2fm2</string>
    <string name="detail_room_washroom_text">%1$d개 / %2$d개</string>

    <!-- SearchStatisticsFragment -->
    <string name="statistic_title">맞춤형 결과 통계</string>
    <string name="statistic_sub_title">원하는 키워드를 클릭해주시면\n맞춤형 결과 통계를 보여드릴게요!</string>
    <string name="statistic_keyword">키워드</string>

    <!-- WishFragment -->
    <string name="wish_title">관심 목록</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="region_reference">* 지역 선택은 선호 지역 선택으로, 부합한 매물이 없을 경우 인근 지역까지 확장될 수 있습니다.</string>
</resources>