<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/tv_chat_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_green_8"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:text="@string/detail_chat_end"/>

    <TextView
        android:id="@+id/tv_chat_end_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_chat_yes"
        android:background="@drawable/rectangle_gray_8"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/tv_chat_end"
        app:layout_constraintEnd_toEndOf="@id/tv_chat_end"
        app:layout_constraintTop_toBottomOf="@id/tv_chat_end"/>

    <TextView
        android:id="@+id/tv_chat_end_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_gray_8"
        android:text="@string/detail_chat_no"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_chat_end_yes"
        app:layout_constraintStart_toStartOf="@id/tv_chat_end"
        app:layout_constraintEnd_toEndOf="@id/tv_chat_end"/>

</androidx.constraintlayout.widget.ConstraintLayout>