<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_essential_top_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.07">

        <ImageView
            android:id="@+id/iv_btn_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="20sp"
            android:text="@string/essential_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_result_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl_essential_top_bar"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        android:layout_marginTop="28dp"
        android:text="@string/result_sub_title"
        android:textSize="14sp"
        android:textColor="@color/body_1"/>

    <TextView
        android:id="@+id/tv_result_show_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_result_sub_title"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        android:layout_marginTop="28dp"
        android:text="@string/result_show_title"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_semibold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_result_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_inactive_100"
        app:layout_constraintTop_toBottomOf="@id/tv_result_show_title"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/button_color"
        android:text="@string/result_show"/>

    <TextView
        android:id="@+id/tv_result_ranking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_result_show"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        android:layout_marginTop="24dp"
        android:text="@string/result_ranking"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/pretendard_semibold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result_ranking"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_result_ranking"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintTop_toBottomOf="@id/tv_result_ranking"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>