<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.ui.search.SearchDetailActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.findhomes.presentation.ui.search.SearchViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_detail_top_bar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:elevation="1dp"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHeight_percent="0.07">

                <ImageView
                    android:id="@+id/iv_btn_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/iv_detail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:imageUrl="@{viewModel.detailData.imgUrl[0]}"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="360:278"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_detail_priceType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:fontFamily="@font/pretendard_semibold"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/iv_detail"
                android:text="@{viewModel.detailData.housingType}"/>

            <TextView
                android:id="@+id/tv_detail_js"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/pretendard_semibold"
                app:layout_constraintStart_toEndOf="@id/tv_detail_priceType"
                app:layout_constraintTop_toTopOf="@id/tv_detail_priceType"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_priceType"
                android:text="@{String.valueOf(viewModel.detailData.price)}"/>

            <TextView
                android:id="@+id/tv_detail_main_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/pretendard_semibold"
                app:layout_constraintStart_toEndOf="@id/tv_detail_js"
                app:layout_constraintTop_toTopOf="@id/tv_detail_priceType"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_priceType"
                android:text="/"/>

            <TextView
                android:id="@+id/tv_detail_ws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/pretendard_semibold"
                app:layout_constraintStart_toEndOf="@id/tv_detail_main_center"
                app:layout_constraintTop_toTopOf="@id/tv_detail_priceType"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_priceType"
                android:text="@{String.valueOf(viewModel.detailData.priceForWs)}"/>

            <TextView
                android:id="@+id/tv_detail_housing_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:fontFamily="@font/pretendard_regular"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_priceType"
                android:text="@{viewModel.detailData.priceType}"/>

            <TextView
                android:id="@+id/tv_detail_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:fontFamily="@font/pretendard_regular"
                app:layout_constraintStart_toEndOf="@id/tv_detail_housing_type"
                app:layout_constraintTop_toTopOf="@id/tv_detail_housing_type"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_housing_type"
                android:text="@{String.format(@string/detail_size_text, viewModel.detailData.size)}"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_housing_type"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_price_info"
                android:text="@string/detail_price_info"
                android:fontFamily="@font/pretendard_semibold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/rv_detail"/>

            <LinearLayout
                android:id="@+id/ll_price_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_price_info"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/gl_start">

                <TextView
                    android:id="@+id/tv_price_what"
                    android:text="@{viewModel.detailData.priceType}"
                    android:textSize="16sp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_price_maintenance"
                    android:text="관리비"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/cl_detail_info_answer"
                app:layout_constraintTop_toTopOf="@id/ll_price_info"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_detail_what_answer"
                    android:text="@{String.format(@string/detail_maintenance_fee_text, viewModel.detailData.price)}"
                    android:textSize="16sp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_maintenance_answer"
                    android:text="@{String.format(@string/detail_maintenance_fee_text, viewModel.detailData.maintenanceFee)}"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_detail_info"
                android:text="@string/detail_detail_info"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/pretendard_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/ll_price_info"/>

            <LinearLayout
                android:id="@+id/cl_detail_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_info"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/gl_start">

                <TextView
                    android:id="@+id/tv_detail_room"
                    android:text="@string/detail_room"
                    android:textSize="16sp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_floor"
                    android:text="@string/detail_floor"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_area"
                    android:text="@string/detail_area"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_room_number"
                    android:text="@string/detail_room_number"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_heat"
                    android:text="@string/detail_housing_option"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_address"
                    android:text="@string/detail_address"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_complete"
                    android:text="@string/detail_complete"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cl_detail_info_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/cl_detail_info"
                app:layout_constraintTop_toTopOf="@id/cl_detail_info"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/ll_detail_room_answer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_detail_room_answer"
                        android:text="@{viewModel.detailData.housingType}"
                        android:textSize="16sp"
                        android:fontFamily="@font/pretendard_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_detail_multi_layer"
                        android:text="(복층형)"
                        android:textSize="16sp"
                        android:fontFamily="@font/pretendard_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.detailData.isMultiLayer ? View.VISIBLE : View.GONE}"/>

                    <TextView
                        android:id="@+id/tv_detail_separate_type"
                        android:text="(분리형)"
                        android:textSize="16sp"
                        android:fontFamily="@font/pretendard_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{viewModel.detailData.isSeparateType ? View.VISIBLE : View.GONE}"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_detail_floor_answer"
                    android:text="@{viewModel.detailData.floor}"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_area_answer"
                    android:text="@{String.format(@string/detail_size_text, viewModel.detailData.size)}"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_room_number_answer"
                    android:text="@{String.format(@string/detail_room_washroom_text, viewModel.detailData.roomNum, viewModel.detailData.washroomNum)}"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_heat_answer"
                    android:text="@{viewModel.detailData.houseOption}"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_car_answer"
                    android:text="@{viewModel.detailData.address}"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_detail_in_answer"
                    android:text="@{viewModel.detailData.completionDate}"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/pretendard_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/cl_detail_info"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>